@@ -417,11 +417,16 @@ u32 CGUIContextMenu::sendClick(const core::position2d<s32>& p)
 //! returns true, if an element was highligted
 bool CGUIContextMenu::highlight(const core::position2d<s32>& p, bool canOpenSubMenu)
 {
+	if (!isEnabled())
+	{
+		return false;
+	}
+
 	// get number of open submenu
 	s32 openmenu = -1;
 	s32 i;
 	for (i=0; i<(s32)Items.size(); ++i)
-		if (Items[i].SubMenu && Items[i].SubMenu->isVisible())
+		if (Items[i].Enabled && Items[i].SubMenu && Items[i].SubMenu->isVisible())
 		{
 			openmenu = i;
 			break;
@@ -430,7 +435,7 @@ bool CGUIContextMenu::highlight(const core::position2d<s32>& p, bool canOpenSubM
 	// delegate highlight operation to submenu
 	if (openmenu != -1)
 	{
-		if (Items[openmenu].SubMenu->highlight(p, canOpenSubMenu))
+		if (Items[openmenu].Enabled && Items[openmenu].SubMenu->highlight(p, canOpenSubMenu))
 		{
 			HighLighted = openmenu;
 			ChangeTime = os::Timer::getTime();
@@ -440,7 +445,8 @@ bool CGUIContextMenu::highlight(const core::position2d<s32>& p, bool canOpenSubM
 
 	// highlight myself
 	for (i=0; i<(s32)Items.size(); ++i)
-		if (getHRect(Items[i], AbsoluteRect).isPointInside(p))
+	{
+		if (Items[i].Enabled && getHRect(Items[i], AbsoluteRect).isPointInside(p))
 		{
 			HighLighted = i;
 			ChangeTime = os::Timer::getTime();
@@ -456,6 +462,7 @@ bool CGUIContextMenu::highlight(const core::position2d<s32>& p, bool canOpenSubM
 					}
 			return true;
 		}
+	}
 
 	HighLighted = openmenu;
 	return false;
